--- a/app/views/beaches/index.html.erb
+++ b/app/views/beaches/index.html.erb
@@ -12,3 +12,7 @@
     </div>
   </div>
 </div>
+
+<iframe src="https:waze.com/ul?ll=-22.96102430%2C-43.21455730&navigate=yes&output=svembed"
+  width="300" height="400">
+</iframe>
