--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,13 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: white;
+  background-color: rgba(10,10,10,0);
+}
+
+.navbar-lewagon-white {
+  justify-content: space-between;
+  background: white;
+  background-color: rgba(10,10,10,0);
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -8,5 +15,53 @@
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 40px;
+  width: 30px;
+}
+
+@media (max-width: 960px) {
+  .navbar-lewagon {
+    .button{
+      font-size: 15px;
+
+    }
+    .input{
+      font-size: 15px;
+    }
+    .image{
+      width: 40px;
+    }
+  }
+}
+@media (max-width: 720px) {
+  .navbar-lewagon {
+    .button{
+      font-size: 13px;
+
+    }
+    .input{
+      font-size: 13px;
+      width: 160px;
+    }
+    .image{
+      width: 30px;
+    }
+  }
+}
+@media (max-width: 540px) {
+  .navbar-lewagon {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    .button{
+      font-size: 8px;
+
+    }
+    .input{
+      font-size: 8px;
+      width: 100px;
+    }
+    .image{
+      width: 25px;
+    }
+
+  }
 }
