--- a/app/views/beaches/index.html.erb
+++ b/app/views/beaches/index.html.erb
@@ -1,14 +1,42 @@
 <header>
   <h1>BEACH<span></span>DAY</h1>
+  <div class="container marg">
+    <p>Te ajudamos a escolher a melhor praia</p>
+  </div>
   <%= image_tag "banner_hide.png" %>
 </header>
 <main>
-  <div id="app" class="container">
-    <% @beaches.each do |beach| %>
-      <card data-image="https://images.unsplash.com/photo-1479660656269-197ebb83b540?dpr=2&auto=compress,format&fit=crop&w=1199&h=798&q=80&cs=tinysrgb&crop=">
-        <h1 slot="header"><%=beach.name %></h1>
-        <p slot="content"><%= beach.overall_rating %></p>
-      </card>
-    <% end %>
+  <div class="container p-0">
+    <div class="row">
+      <div class="col-12">
+        <div class="card" style="background-image: url(https://i.pinimg.com/originals/79/81/64/798164e1c3692b4b29b94729ab5551e1.jpg)">
+          <h1>Melhores praias para sua família</h1>
+        </div>
+      </div>
+    </div>
+    <div id="beaches" class="search">
+      <%= form_tag beaches_path, method: :get do %>
+        <%= text_field_tag :query,
+          params[:query],
+          class: "form-control",
+          placeholder: "Ache uma praia"
+        %>
+      <% end %>
+    </div>
+    <div class="row">
+      <% @beaches.each do |beach| %>
+        <div class="col-6 m-0">
+          <div class="flip">
+            <div class="front" style="background-image: url(https://images.unsplash.com/photo-1515238152791-8216bfdf89a7?ixlib=rb-1.2.1&auto=format&fit=crop&w=1352&q=80)">
+              <h1 class="text-shadow"><%=beach.name %></h1>
+              <p slot="content"><%= beach.overall_rating %></p>
+            </div>
+            <div class="back">
+              <p><%= beach.overview %></p>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    </div>
   </div>
 </main>
