--- a/app/views/traffics/index.html.erb
+++ b/app/views/traffics/index.html.erb
@@ -1,3 +1,5 @@
-<iframe src="https:waze.com/ul?ll=-22.96102430%2C-43.21455730&navigate=yes&output=svembed"
-  width="300" height="400">
-</iframe>
+<div id="map"
+     style="width: 100%; height: 400px;"
+     data-markers="<%= @markers.to_json %>"
+     data-googlemap-api-key="<%= ENV['GOOGLEMAP_API_KEY'] %>">
+</div>
