new pull request

--- a/app/views/beaches/index.html.erb
+++ b/app/views/beaches/index.html.erb
@@ -1,12 +1,12 @@
 <header>
-  <h1>BEACH<span></span>DAY</h1>
+  <h1 class="scroll-hide">BEACH<span></span>DAY</h1>
   <div class="container marg">
     <p>Te ajudamos a escolher a melhor praia</p>
   </div>
   <%= image_tag "banner_hide.png" %>
 </header>
 <main>
-  <div class="container p-0">
+  <div class="m-0 p-0">
     <div class="row">
       <div class="col-12">
         <div class="card" style="background-image: url(https://i.pinimg.com/originals/79/81/64/798164e1c3692b4b29b94729ab5551e1.jpg)">
