--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -6,6 +6,9 @@
   src: url("//db.onlinewebfonts.com/t/467526db1f6b8c1f5f3b31f34bb1b8a7.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/467526db1f6b8c1f5f3b31f34bb1b8a7.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/467526db1f6b8c1f5f3b31f34bb1b8a7.woff") format("woff"), url("//db.onlinewebfonts.com/t/467526db1f6b8c1f5f3b31f34bb1b8a7.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/467526db1f6b8c1f5f3b31f34bb1b8a7.svg#Sucrose Bold Two") format("svg");
 }
 
+* {
+  box-sizing: border-box;
+}
 
 .marg{
   margin-top: -50px;
@@ -13,21 +16,22 @@
 body {
   margin: 0;
   background: rgb(225, 209, 209);
-
 }
-header {
-  background: url(banner_full.png) no-repeat;
-  padding-top: 61.93333333%;
-  background-size: cover;
-  font-family: 'Sucrose Bold Two';
-  height: 490px;
 
+header {
+  background: url(banner_full.png) 50% 50% / 100% no-repeat;
+  padding-top: 140%;
+  background-size: 100% auto;
+  background-size: 100% auto;
+  font-family: 'Sucrose Bold Two';
+  position: relative;
+  margin-top: 0;
 }
 header img {
   position: absolute;
   right: 0;
   top: 0;
-  width: 57.6%;
+  width: 61.4%;
   height: 100%;
 }
 header h1 {
@@ -40,12 +44,19 @@ header h1 {
   margin-top: 0;
   text-align: center;
 }
+
+.h1-hide {
+  color: rgba(10,10,10,0);
+}
+
+
 header h1 span {
   display: block;
   font-size: 8.75vw;
 }
 
 header p{
+  margin-top: -320px;
   text-align: center;
   z-index: 1;
   position: relative;
@@ -55,12 +66,7 @@ header p{
 main {
   margin-top: -300px;
   font-family: 'IM Fell French Canon Pro';
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
-@media all and (max-width: 400px) {
-  main { padding: 2rem; }
+  font-size: 1.4rem;
+  padding: 2rem 25%;
+  line-height: 1.6;
 }
