--- a/app/views/beaches/show.html.erb
+++ b/app/views/beaches/show.html.erb
@@ -1,2 +1,5 @@
-<div id="map" data-markers="<%= @markers.to_json %>" ></div>
+<div class="container">
+  <div id="map" data-markers="<%= @markers.to_json %>" >
+  </div>
+</div>
 
