--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -10,15 +10,12 @@
   box-sizing: border-box;
 }
 
-.marg{
-  margin-top: -50px;
-}
 body {
   margin: 0;
   background: rgb(225, 209, 209);
 }
 
-header {
+.index {
   background: url(banner_full.png) 50% 50% / 100% no-repeat;
   padding-top: 140%;
   background-size: 100% auto;
@@ -27,17 +24,17 @@ header {
   position: relative;
   margin-top: 0;
 }
-header img {
+.index img {
   position: absolute;
   right: 0;
   top: 0;
   width: 61.4%;
   height: 100%;
 }
-header h1 {
+.index h1 {
   position: fixed;
   font-family: 'Sucrose Bold Two';
-  top: 3rem;
+  top: 6rem;
   right: 2rem;
   font-size: 12vw;
   line-height: .8;
@@ -50,23 +47,53 @@ header h1 {
 }
 
 
-header h1 span {
+.index h1 span {
   display: block;
   font-size: 8.75vw;
 }
 
-header p{
-  margin-top: -320px;
+.index p{
+  margin-top: -1260px;
   text-align: center;
+  font-size: 60px;
   z-index: 1;
   position: relative;
   font-family: 'Anton', sans-serif;
 }
 
 main {
-  margin-top: -300px;
+  margin-top: -1150px;
   font-family: 'IM Fell French Canon Pro';
   font-size: 1.4rem;
-  padding: 2rem 25%;
   line-height: 1.6;
+}
+
+
+.banner {
+  background-image: url(beach_test_picture.png);
+  background-size: cover;
+  background-position: center;
+  padding: 140px 0;
+  margin-top: 0px;
+  height: 600px;
+}
+.banner h1 {
+  font-family: 'Sucrose Bold Two';
+  font-size: 12vw;
+  text-align: center;
+}
+
+.banner p{
+  text-align: center;
+  font-family: 'Anton', sans-serif;
+}
+
+@media (max-width: 750px) {
+  .banner {
+    height: 200px;
+    padding: 70px 0;
+  }
+  .index p{
+    margin-top: -320px;
+  }
 }
