--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -18,7 +18,7 @@
     width: inherit;
     background-size: cover!important;
     background-position: center!important;
-    height: 130px;
+    height: 400px;
     background: #313131;
     border-radius: 4px;
     margin: 3px;
@@ -42,7 +42,7 @@
     >.back {
         display: block;
         transition-timing-function: cubic-bezier(.175, .885, .32, 1.275);
-        transition-duration: .5s;
+        transition-duration: .2s;
         transition-property: transform, opacity;
     }
     >.front {
@@ -92,7 +92,7 @@
       width: inherit;
       background-size: cover!important;
       background-position: center!important;
-      height: 100px;
+      height: 300px;
       background: #313131;
       border-radius: 4px;
       margin: 4px 0px;
@@ -106,4 +106,21 @@
 
 .text-shadow {
   text-shadow: 1px 1px rgba(0, 0, 0, 0.04), 2px 2px rgba(0, 0, 0, 0.04), 3px 3px rgba(0, 0, 0, 0.04), 4px 4px rgba(0, 0, 0, 0.04), 0.125rem 0.125rem rgba(0, 0, 0, 0.04), 6px 6px rgba(0, 0, 0, 0.04), 7px 7px rgba(0, 0, 0, 0.04), 8px 8px rgba(0, 0, 0, 0.04), 9px 9px rgba(0, 0, 0, 0.04), 0.3125rem 0.3125rem rgba(0, 0, 0, 0.04), 11px 11px rgba(0, 0, 0, 0.04), 12px 12px rgba(0, 0, 0, 0.04), 13px 13px rgba(0, 0, 0, 0.04), 14px 14px rgba(0, 0, 0, 0.04), 0.625rem 0.625rem rgba(0, 0, 0, 0.04), 16px 16px rgba(0, 0, 0, 0.04), 17px 17px rgba(0, 0, 0, 0.04), 18px 18px rgba(0, 0, 0, 0.04), 19px 19px rgba(0, 0, 0, 0.04), 1.25rem 1.25rem rgba(0, 0, 0, 0.04);
+}
+
+.image-medium{
+  width: 150px;
+  height: auto;
+}
+
+.image-small{
+  width: 60px;
+}
+
+
+.card-day{
+  opacity: 0.6;
+  &:hover {
+    opacity: 1;
+  }
 }
