--- a/app/views/weathers/index.html.erb
+++ b/app/views/weathers/index.html.erb
@@ -1,4 +1,4 @@
-<div class="banner m-0">
+<!-- <div class="banner m-0">
   <h1><%= @beach.name  %></h1>
   <p><%= @beach.overview %></p>
 </div>
@@ -200,3 +200,4 @@
     </div>
   </div>
 </div>
+ -->
