--- a/app/assets/stylesheets/traffics.scss
+++ b/app/assets/stylesheets/traffics.scss
@@ -6,7 +6,7 @@
 }
 
 /* Optional: Makes the sample page fill the window. */
-.container {
+.container1 {
   height: 400px;
   width: 100%;
   padding-top: 70px;
