--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -38,6 +38,9 @@
     text-align: center;
     font-family: 'Roboto Mono';
     position: relative;
+    h2{
+      font-size: 50px;
+    }
     >.front,
     >.back {
         display: block;
@@ -80,7 +83,6 @@
         }
     }
 }
-
 // custom
 .flip {
     width: 100%;
