--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -15,7 +15,12 @@
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 30px;
+  width: 60px;
+}
+
+.font-big{
+  font-size: 50px;
+  margin-right: 20px;
 }
 
 @media (max-width: 960px) {
