--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,6 +10,10 @@
   background-color: rgba(10,10,10,0);
 }
 
+.nav-item{
+  font-size: 30px;
+}
+
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
 }
@@ -30,7 +34,7 @@
 
     }
     .input{
-      font-size: 15px;
+      font-size: 30px;
     }
     .image{
       width: 40px;
@@ -44,7 +48,7 @@
 
     }
     .input{
-      font-size: 13px;
+      font-size: 30px;
       width: 160px;
     }
     .image{
