--- a/app/views/beaches/index.html.erb
+++ b/app/views/beaches/index.html.erb
@@ -30,7 +30,7 @@
                 </div>
               </div>
               <div class="back">
-                <div class="barras text-align-center text-left">
+                <div class="barras text-align-center text-left pt-3">
                   <div class="row">
                     <div class="col-6 pt-2">
                       <p class="pt-1">ESTACIONAMENTO</p>
