--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -82,7 +82,8 @@ main {
 }
 .banner h1 {
   font-family: 'Sucrose Bold Two';
-  font-size: 12vw;
+  font-size: 9vw;
+  padding-top: 5%;
   text-align: center;
 }
 
