--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -73,7 +73,7 @@ main {
 
 
 .banner {
-  background-image: linear-gradient(rgba(255,255,255,0.5),rgba(0,0,0,0)), url(beach_test_picture.png);
+  // background-image: linear-gradient(rgba(255,255,255,0.5),rgba(0,0,0,0)), url(beach_test_picture.png);
   background-size: cover;
   background-position: center;
   padding: 140px 0;
