--- a/app/assets/stylesheets/components/_bar.scss
+++ b/app/assets/stylesheets/components/_bar.scss
@@ -24,16 +24,16 @@
 }
 
 
-.class-red{
-  background: red;
+.class-blue1{
+  background: #59929e;
 }
 
-.class-yellow{
-  background: yellow;
+.class-blue2{
+  background: #28b4d1;
 }
 
-.class-blue{
-  background: #3e6db5;
+.class-blue3{
+  background: #00d3ff;
 }
 
 .checked {
