--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -15,8 +15,12 @@ body {
   background: rgb(225, 209, 209);
 }
 
+header {
+  background: linear-gradient(rgba(200,200,200,0.2),rgba(200,200,200,0.2));
+}
+
 .index {
-  background: linear-gradient(rgba(200,200,200,0.9),rgba(200,200,200,0.9)), url(banner_full.png) 100% no-repeat;
+  background: url(banner_full.png) 100% no-repeat;
   padding-top: 100%;
   background-position: top;
   background-size: 100% auto;
