--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -38,6 +38,7 @@
     text-align: center;
     font-family: 'Roboto Mono';
     position: relative;
+    box-shadow: 0px 0px 5px rgba(10,10,10,0.3)
     h2{
       font-family: 'Anton', sans-serif;
       font-size: 50px;
