--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -38,12 +38,7 @@
     text-align: center;
     font-family: 'Roboto Mono';
     position: relative;
-    box-shadow: 0px 0px 5px rgba(10,10,10,0.3)
-    h2{
-      font-family: 'Anton', sans-serif;
-      font-size: 50px;
-      color: rgb(50, 50, 50)
-    }
+    box-shadow: 0px 0px 10px rgba(10,10,10,0.3);
     >.front,
     >.back {
         display: block;
@@ -111,6 +106,14 @@
     }
 }
 
+
+.h2flip {
+  font-family: 'Anton', sans-serif !important;
+  font-size: 40px !important;
+  color: rgb(50, 50, 50) !important;
+  padding-top: 20%;
+  }
+
 .image-medium{
   width: 150px;
   height: auto;
@@ -143,15 +146,15 @@
 
 .location-bottom-right{
   position: absolute;
-  right: 13px;
+  right: 16px;
   bottom: 5px;
-  font-size: 1.7rem !important;
+  font-size: 1.9rem !important;
   line-height: 100% !important;
   color: rgb(10,10,10) !important;
 }
 
 .location-bottom-left{
-  width: 60px;
+  width: 70px;
   position: absolute;
   left: 10px;
   bottom: 10px;
