front banners, reviews page

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -82,8 +82,9 @@ main {
 }
 .banner h1 {
   font-family: 'Sucrose Bold Two';
-  font-size: 12vw;
+  font-size: 9vw;
   text-align: center;
+  padding-top: 5%;
 }
 
 .banner p{
