--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the reviews controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+#card-review {
+  width: 100%;
+  height: 85px;
+  background-color: #F0EFEB;
+  margin-bottom: 20px;
+  padding: 10px;
+  box-shadow: 3px 3px #ccc5b9;
+}
+
+.add {
+  background-color: #ccc5b9;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
