--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,6 +5,6 @@
     <a href="#"><i class="fab fa-pinterest"></i></a>
   </div>
   <div class="footer-copyright">
-    Babá de aluguel!!
+    Copyright © 2020 Beach Day. Todos os direitos reservados.
   </div>
 </div>
