--- a/app/assets/stylesheets/components/_bar.scss
+++ b/app/assets/stylesheets/components/_bar.scss
@@ -18,7 +18,8 @@
 }
 .valor-nivel {
   line-height:30px;
-  color:#fff;
+  color: rgb(10,10,10);
+  font-style: bold;
   margin-left:10px;
   font-size:12px;
 }
@@ -41,6 +42,5 @@
 }
 
 .geral {
-  font-size: 40px;
-  font-weight: bold;
+  font-size: 30px;
 }
