--- a/app/views/beaches/show.html.erb
+++ b/app/views/beaches/show.html.erb
@@ -4,38 +4,34 @@
 <div class="cont">
   <ul class="list-inline tabs-underlined w-100 justify-content-between pb-5">
     <li>
-      <p class="tab-underlined active" id="tab1">Notas</p>
+      <p class="tab-underlined active" id="tab1">NOTAS</p>
     </li>
     <li>
-      <p class="tab-underlined" id="tab5">Avaliações</p>
+      <p class="tab-underlined" id="tab5">AVALIAÇÕES</p>
     </li>
     <li>
-      <p class="tab-underlined" id="tab2">Tempo Real</p>
+      <p class="tab-underlined" id="tab2">TEMPO REAL</p>
     </li>
     <li>
-      <p class="tab-underlined" id="tab3">Previsão do Tempo</p>
+      <p class="tab-underlined" id="tab3">PREVISÃO DO TEMPO</p>
     </li>
     <li>
-      <p class="tab-underlined" id="tab4">Como Chegar</p>
+      <p class="tab-underlined" id="tab4">COMO CHEGAR</p>
     </li>
   </ul>
 
 
-  <div id="overview" class="d-flex justify-content-center pb-4">
-    <h3><%= @beach.overview %></h3>
-  </div>
   <div id="grades" class="container">
     <div class="row">
-      <div class="col-6 d-flex justify-content-between">
+      <div class="col-12 d-flex justify-content-center">
         <p class="geral pr-2">AVALIAÇÃO GERAL</p>
-      </div>
-      <div class="col-6 d-flex justify-content-between">
         <% c = 1 %>
-        <% 10.times do %>
-          <% if c < @beach.overall_rating %>
-            <span class="fa fa-star checked geral"></span>
+        <% rating = (@beach.overall_rating / 2).round(1) %>
+        <% 5.times do %>
+          <% if c < rating %>
+            <span class="fa fa-star checked geral pl-2 pt-1"></span>
           <% else %>
-            <span class="fa fa-star geral"></span>
+            <span class="fa fa-star geral  pl-2 pt-1"></span>
           <% end  %>
           <% c += 1 %>
         <% end  %>
@@ -108,30 +104,35 @@
   </div>
 
   <div id="reviews" class="container inactive-tab">
+    <div id="overview" class="d-flex justify-content-center pb-4">
+      <h3 class="h3-overview w-100"><%= @beach.overview %></h3>
+    </div>
     <% if !@beach.reviews.empty? %>
       <% @beach.reviews.each do |review| %>
       <div id="card-review">
-        <p><strong><%= review.title %></strong></p>
+        <p class="p-card"><strong><%= review.title %></strong></p>
         <p><%= review.content %></p>
       </div>
       <% end %>
     <% else  %>
       <p><strong>>Essa praia ainda possui avaliações</p>
     <% end %>
-    <%= link_to "Adicionar avaliação", new_beach_review_path(@beach), class: "add"%>
+    <%= link_to "Adicionar avaliação", new_beach_review_path(@beach), class: "btn btn-primary btn-blue align-middle h-75 button"%>
   </div>
 
   <div id="realtime" class="container inactive-tab">
     <% hour = @weathers_today[0] %>
-    <div id="weather-day00-hour<%= hour.date_time.hour %>" class="">
-      <h3><%= @portuguese[0] %>, <%= hour.date_time.strftime("%d/%m/%Y")%> <%= hour.date_time.hour.to_s.rjust(2, '0')%>h</h3>
-      <h3><%= hour.description.capitalize%></h3>
-      <div class="d-flex justify-content-around">
+    <div id="weather-day00-hour<%= hour.date_time.hour %>" class="all-cards hourly">
+      <div class="d-flex justify-content-between align-middle">
+        <div class="padding-t">
+          <h3 class="h3-weather"><%= @portuguese[0] %>, <%= hour.date_time.strftime("%d/%m/%Y")%> <%= hour.date_time.hour.to_s.rjust(2, '0')%>h</h3>
+          <h4><%= hour.description.capitalize%></h4>
+        </div>
         <div>
           <%= image_tag "weather_icons/#{hour.icon}.png", class: "image-medium" %>
+          <h2 class="pl-5"><%= hour.air_temperature.round(1) %>°C</h2>
         </div>
-        <h2><%= hour.air_temperature.round(1) %>°C</h2>
-        <div>
+        <div class="padding-t1">
           <p class="p-0 m-0">Sensação Térmica: <%= (hour.air_temperature_feels_like.round(1)) %>°C</p>
           <p class="p-0 m-0">Chuva: <%= (hour.rain_probability * 100).to_i %>%</p>
           <p class="p-0 m-0">Humidade: <%= (hour.humidity).to_i %>%</p>
@@ -159,19 +160,21 @@
 
 
 
-  <div id="weatherforecast" class="inactive-tab">
-     <div class="card-weathers w-100">
-      <div class="card-top w-100">
+  <div id="weatherforecast" class="container inactive-tab">
+     <div class="card-weathers">
+      <div class="card-top">
         <% @weathers_today.each do |hour| %>
           <div id="weather-day0-hour<%= hour.date_time.hour %>" class="inactive-tab all-cards hourly">
-            <h3><%= @portuguese[0] %>, <%= hour.date_time.strftime("%d/%m/%Y")%> <%= hour.date_time.hour.to_s.rjust(2, '0')%>h</h3>
-            <h3><%= hour.description.capitalize%></h3>
-            <div class="d-flex justify-content-around">
+            <div class="d-flex justify-content-between align-middle">
+              <div class="padding-t">
+                <h3 class="h3-weather"><%= @portuguese[0] %>, <%= hour.date_time.strftime("%d/%m/%Y")%> <%= hour.date_time.hour.to_s.rjust(2, '0')%>h</h3>
+                <h4><%= hour.description.capitalize%></h4>
+              </div>
               <div>
                 <%= image_tag "weather_icons/#{hour.icon}.png", class: "image-medium" %>
+                <h2 class="pl-5"><%= hour.air_temperature.round(1) %>°C</h2>
               </div>
-              <h2><%= hour.air_temperature.round(1) %>°C</h2>
-              <div>
+              <div class="padding-t1">
                 <p class="p-0 m-0">Sensação Térmica: <%= (hour.air_temperature_feels_like.round(1)) %>°C</p>
                 <p class="p-0 m-0">Chuva: <%= (hour.rain_probability * 100).to_i %>%</p>
                 <p class="p-0 m-0">Humidade: <%= (hour.humidity).to_i %>%</p>
@@ -193,19 +196,21 @@
 
         <% @weathers_today_1.each do |hour| %>
           <div id="weather-day1-hour<%= hour.date_time.hour %>" class="inactive-tab all-cards hourly">
-            <h3><%= @portuguese[1] %>, <%= hour.date_time.strftime("%d/%m/%Y")%> <%= hour.date_time.hour.to_s.rjust(2, '0')%>h</h3>
-            <h3><%= hour.description.capitalize%></h3>
-            <div class="d-flex justify-content-around">
+            <div class="d-flex justify-content-between align-middle">
+              <div class="padding-t">
+                <h3 class="h3-weather"><%= @portuguese[0] %>, <%= hour.date_time.strftime("%d/%m/%Y")%> <%= hour.date_time.hour.to_s.rjust(2, '0')%>h</h3>
+                <h4><%= hour.description.capitalize%></h4>
+              </div>
               <div>
                 <%= image_tag "weather_icons/#{hour.icon}.png", class: "image-medium" %>
+                <h2 class="pl-5"><%= hour.air_temperature.round(1) %>°C</h2>
               </div>
-              <h2><%= hour.air_temperature.round(1) %>°C</h2>
-              <div>
+              <div class="padding-t1">
                 <p class="p-0 m-0">Sensação Térmica: <%= (hour.air_temperature_feels_like.round(1)) %>°C</p>
                 <p class="p-0 m-0">Chuva: <%= (hour.rain_probability * 100).to_i %>%</p>
                 <p class="p-0 m-0">Humidade: <%= (hour.humidity).to_i %>%</p>
                 <p class="p-0 m-0">Vento: <%= (hour.wind_speed).to_i %>km/h (<%=hour.wind_direction %>)</p>
-                <% ocean = @oceans_today_1.where("date_time = '#{hour.date_time}'") %>
+                <% ocean = @oceans_today.where("date_time = '#{hour.date_time}'") %>
                 <% unless ocean.empty? %>
                   <% if ocean[0].wave_height %>
                     <p class="p-0 m-0">Ondas: <%= (ocean[0].wave_height) %>m (<%=ocean[0].wave_direction %>)</p>
@@ -220,19 +225,21 @@
         <% end %>
         <% @weathers_today_2.each do |hour| %>
           <div id="weather-day2-hour<%= hour.date_time.hour %>" class="inactive-tab all-cards hourly">
-            <h3><%= @portuguese[2]%>, <%= hour.date_time.strftime("%d/%m/%Y")%> <%= hour.date_time.hour.to_s.rjust(2, '0')%>h</h3>
-            <h3><%= hour.description.capitalize%></h3>
-            <div class="d-flex justify-content-around">
+            <div class="d-flex justify-content-between align-middle">
+              <div class="padding-t">
+                <h3 class="h3-weather"><%= @portuguese[0] %>, <%= hour.date_time.strftime("%d/%m/%Y")%> <%= hour.date_time.hour.to_s.rjust(2, '0')%>h</h3>
+                <h4><%= hour.description.capitalize%></h4>
+              </div>
               <div>
                 <%= image_tag "weather_icons/#{hour.icon}.png", class: "image-medium" %>
+                <h2 class="pl-5"><%= hour.air_temperature.round(1) %>°C</h2>
               </div>
-              <h2><%= hour.air_temperature.round(1) %>°C</h2>
-              <div>
+              <div class="padding-t1">
                 <p class="p-0 m-0">Sensação Térmica: <%= (hour.air_temperature_feels_like.round(1)) %>°C</p>
                 <p class="p-0 m-0">Chuva: <%= (hour.rain_probability * 100).to_i %>%</p>
                 <p class="p-0 m-0">Humidade: <%= (hour.humidity).to_i %>%</p>
                 <p class="p-0 m-0">Vento: <%= (hour.wind_speed).to_i %>km/h (<%=hour.wind_direction %>)</p>
-                <% ocean = @oceans_today_2.where("date_time = '#{hour.date_time}'") %>
+                <% ocean = @oceans_today.where("date_time = '#{hour.date_time}'") %>
                 <% unless ocean.empty? %>
                   <% if ocean[0].wave_height %>
                     <p class="p-0 m-0">Ondas: <%= (ocean[0].wave_height) %>m (<%=ocean[0].wave_direction %>)</p>
@@ -248,18 +255,17 @@
 
         <div id="weather-day3" class="inactive-tab all-cards daily">
           <% daily = @dailies[3] %>
-          <h3><%= @portuguese[3] %>, <%= daily.date_time.strftime("%d/%m/%Y")%></h3>
-          <h3><%= daily.description.capitalize%></h3>
-          <div class="d-flex justify-content-around">
-            <div>
-              <%= image_tag "weather_icons/#{daily.icon}.png", class: "image-medium" %>
-              <p><%= daily.description%></p>
+          <div class="d-flex justify-content-between align-middle">
+            <div class="padding-t">
+              <h3 class="h3-weather"><%= @portuguese[3] %>, <%= daily.date_time.strftime("%d/%m/%Y")%></h3>
+              <h4><%= daily.description.capitalize%></h4>
             </div>
             <div>
+              <%= image_tag "weather_icons/#{daily.icon}.png", class: "image-medium" %>
               <h2><%= daily.air_temperature.round(1) %>°C</h2>
               <p> MIN <%= daily.air_temperature_min.round()%>° / MAX <%= daily.air_temperature_max.round()%>°</p>
             </div>
-            <div>
+            <div class="padding-t1">
               <p class="p-0 m-0">Sensação Térmica: <%= (daily.air_temperature_feels_like.round(1)) %>°C</p>
               <p class="p-0 m-0">Chuva: <%= (daily.rain_probability * 100).to_i %>%</p>
               <p class="p-0 m-0">Humidade: <%= (daily.humidity).to_i %>%</p>
@@ -277,25 +283,24 @@
 
         <div id="weather-day4" class="inactive-tab all-cards daily">
           <% daily = @dailies[4] %>
-          <h3><%= @portuguese[4] %>, <%= daily.date_time.strftime("%d/%m/%Y")%></h3>
-          <h3><%= daily.description.capitalize%></h3>
-          <div class="d-flex justify-content-around">
-            <div>
-              <%= image_tag "weather_icons/#{daily.icon}.png", class: "image-medium" %>
-              <p><%= daily.description%></p>
+         <div class="d-flex justify-content-between align-middle">
+            <div class="padding-t">
+              <h3 class="h3-weather"><%= @portuguese[3] %>, <%= daily.date_time.strftime("%d/%m/%Y")%></h3>
+              <h4><%= daily.description.capitalize%></h4>
             </div>
             <div>
+              <%= image_tag "weather_icons/#{daily.icon}.png", class: "image-medium" %>
               <h2><%= daily.air_temperature.round(1) %>°C</h2>
               <p> MIN <%= daily.air_temperature_min.round()%>° / MAX <%= daily.air_temperature_max.round()%>°</p>
             </div>
-            <div>
+            <div class="padding-t1">
               <p class="p-0 m-0">Sensação Térmica: <%= (daily.air_temperature_feels_like.round(1)) %>°C</p>
               <p class="p-0 m-0">Chuva: <%= (daily.rain_probability * 100).to_i %>%</p>
               <p class="p-0 m-0">Humidade: <%= (daily.humidity).to_i %>%</p>
               <p class="p-0 m-0">Vento: <%= (daily.wind_speed).to_i %>km/h (<%=daily.wind_direction %>)</p>
-              <% ocean = @oceans_today_4.where("wave_height > 0").order(wave_height: :desc).limit(1) %>
+              <% ocean = @oceans_today_3.where("wave_height > 0").order(wave_height: :desc).limit(1) %>
               <p class="p-0 m-0">Maior onda do dia: <%= ocean[0].wave_height %> m</p>
-              <% ocean = @oceans_today_4.where("water_temperature > 0").order(water_temperature: :asc).limit(1) %>
+              <% ocean = @oceans_today_3.where("water_temperature > 0").order(water_temperature: :asc).limit(1) %>
               <% unless ocean.empty? %>
                 <p class="p-0 m-0">Menor Temperatura da água do dia: <%= ocean[0].water_temperature.round(1) %>°C</p>
               <% end %>
@@ -303,7 +308,17 @@
             </div>
           </div>
         </div>
-        <form action="#" method="get" class="w-100 inactive-tab range-today"  id="ranges">
+
+
+
+
+
+
+
+
+
+
+        <form action="#" method="get" class="w-100 inactive-tab range-today mb-5"  id="ranges">
           <input type="range" id="weather-range-0" name="weather-range" step="3" min='<%= @weathers_today[0].date_time.hour %>' max='<%= @weathers_today[-1].date_time.hour %>' class="w-100">
           <div class="d-flex justify-content-between">
             <% @weathers_today.each do |hour| %>
@@ -311,7 +326,7 @@
             <% end %>
           </div>
         </form>
-        <form action="#" method="get" class="w-100 inactive-tab range-today_1" id="ranges">
+        <form action="#" method="get" class="w-100 inactive-tab range-today_1 mb-5" id="ranges">
           <input type="range" id="weather-range-1" name="weather-range" step="3"  min='<%= @weathers_today_1[0].date_time.hour %>' max='<%= @weathers_today_1[-1].date_time.hour %>' class="w-100">
           <div class="d-flex justify-content-between">
             <% @weathers_today_1.each do |hour| %>
@@ -319,7 +334,7 @@
             <% end %>
           </div>
         </form>
-        <form action="#" method="get" class="w-100 inactive-tab range-today_2" id="ranges">
+        <form action="#" method="get" class="w-100 inactive-tab range-today_2 mb-5" id="ranges">
           <input type="range" id="weather-range-2" name="weather-range" step="3" min='<%= @weathers_today_2[0].date_time.hour %>' max='<%= @weathers_today_2[-1].date_time.hour %>' class="w-100">
           <div class="d-flex justify-content-between">
             <% @weathers_today_2.each do |hour| %>
@@ -328,28 +343,28 @@
           </div>
         </form>
       </div>
-      <div class="card-down d-flex w-100 justify-content-around">
-        <div class="card-day day-0 w-100">
+      <div class="card-down d-flex w-100 justify-content-between w-100 mt-5">
+        <div class="card-day day-0 w-100 padding-l">
           <p class="text-align-center"><%= @dailies[0].date_time.strftime("%A")[0..2]%></p>
           <%= image_tag "weather_icons/#{@dailies[0].icon}.png", class: "image-small" %>
           <p><%= @dailies[0].air_temperature_min.round()%>° / <%= @dailies[0].air_temperature_max.round()%>°</p>
         </div>
-        <div class="card-day day-1 w-100">
+        <div class="card-day day-1 w-100 padding-l">
           <p><%= @dailies[1].date_time.strftime("%A")[0..2]%></p>
           <%= image_tag "weather_icons/#{@dailies[2].icon}.png", class: "image-small"%>
           <p><%= @dailies[1].air_temperature_min.round()%>° / <%= @dailies[0].air_temperature_max.round()%>°</p>
         </div>
-        <div class="card-day day-2 w-100">
+        <div class="card-day day-2 w-100 padding-l">
           <p><%= @dailies[2].date_time.strftime("%A")[0..2]%></p>
           <%= image_tag "weather_icons/#{@dailies[3].icon}.png", class: "image-small" %>
           <p><%= @dailies[2].air_temperature_min.round()%>° / <%= @dailies[0].air_temperature_max.round()%>°</p>
         </div>
-        <div class="card-day day-3 w-100">
+        <div class="card-day day-3 w-100 padding-l">
           <p><%= @dailies[3].date_time.strftime("%A")[0..2]%></p>
           <%= image_tag "weather_icons/#{@dailies[4].icon}.png", class: "image-small" %>
           <p><%= @dailies[3].air_temperature_min.round()%>° / <%= @dailies[0].air_temperature_max.round()%>°</p>
         </div>
-        <div class="card-day day-4 w-100">
+        <div class="card-day day-4 w-100 padding-l">
           <p><%= @dailies[4].date_time.strftime("%A")[0..2]%></p>
           <%= image_tag "weather_icons/#{@dailies[5].icon}.png", class: "image-small" %>
           <p><%= @dailies[4].air_temperature_min.round()%>° / <%= @dailies[0].air_temperature_max.round()%>°</p>
