--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -152,7 +152,7 @@
   font-size: 1.9rem !important;
   line-height: 100% !important;
   color: #daa520 !important;
-  text-shadow: 3px 3px rgba(10,10,10,0.5);
+  text-shadow: 3px 3px black;
 }
 
 .location-bottom-left{
